Fix anchor issue behind header bar

--- a/src/site/stylesheets/_layout.scss
+++ b/src/site/stylesheets/_layout.scss
@@ -208,6 +208,7 @@ a {
   display: flex;
 }
 #main-content {
+  max-width: 100%;
   padding-top: 60px; // Add #site-title height
   padding-left: $sidebar-width + 20px;
   padding-right: 20px;
